# rustogrammer

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  deploy.sh  install.bat  junk.asc  make-linux-binary.sh  make-windows-binary.bat  ppackages.bat  run-0000-00.evt  test.json
.github/workflows/: rust.yml
docs/: .gitignore  book.toml
docs/src/: SUMMARY.md  apppendix_1.md  chap1_1.md  chap2_1.md  chap2_2.md  chap4_1.md  chap4_2.md  chap4_3.md  chap4_4.md  chap4_5.md  chap4_6.md  chap4_7.md  chap4_8.md  chap4_bindsets.md  chap4_filters.md  chap6_1.md  chap6_2.md  chap7_1.md  chap7_2.md  chap7_2_analyze.md  chap7_2_apply.md  chap7_2_attach.md  chap7_2_channel.md  chap7_2_evbunpack.md  chap7_2_exit.md  chap7_2_filter.md  chap7_2_fit.md  chap7_2_fold.md  chap7_2_gates.md  chap7_2_integrate.md  chap7_2_mirror.md  chap7_2_parameter.md  chap7_2_pman.md  chap7_2_project.md  chap7_2_pseudo.md  chap7_2_rawparameter.md  chap7_2_responses.md  chap7_2_ringformat.md  chap7_2_roottree.md  chap7_2_sbind.md  (+28 more)
restclients/Python/: ComboTree.py  CompoundConditionEditor.py  DataSourceMenu.py  DefinitionIO.py  EnumeratedTypeSelector.py  FileMenu.py  FilterMenu.py  GateMenu.py  Gui.py  HelpMenu.py  MaskGateEditor.py  NotConditionEditor.py  NumericInput.py  OsServices.py  ParameterChooser.py  ParameterListselector.py  PortManager.py  SliceConditionEditor.py  SpectraMenu.py  SpectrumList.py  SpectrumTypeFrame.py  SpectrumTypeSelector.py  TreeMaker.py  TrueFalseConditionEditor.py  TwodConditionEditor.py  axisdef.py  bits.py  capabilities.py  conditionEditor.py  direction.py  editablelist.py  editor1d.py  editor2dSum.py  editorBitmask.py  editorG1d.py  editorG2d.py  editorGD.py  editorGSummary.py  editorProjection.py  editorStripchart.py  (+14 more)
restclients/Tcl/: SpecTclRestCommand.tcl  pkgIndex.tcl  restclient.tcl  rustcl.tcl
src/: main.rs  ring_items.rs
src/conditions/: compound.rs  cut.rs  mod.rs  twod.rs
src/histogramer/: mod.rs
src/messaging/: condition_messages.rs  mod.rs  parameter_messages.rs  spectrum_messages.rs
src/parameters/: mod.rs
src/processing/: mod.rs
src/projections/: mod.rs
src/rest/: apply.rs  channel.rs  data_processing.rs  evbunpack.rs  exit.rs  filter.rs  fit.rs  fold.rs  gates.rs  getstats.rs  integrate.rs  mirror_list.rs  mod.rs  parameter.rs  processing.rs  project.rs  ringversion.rs  sbind.rs  shm.rs  spectrum.rs  spectrumio.rs  traces.rs  unbind.rs  unimplemented.rs  version.rs
src/ring_items/: abnormal_end.rs  analysis_ring_items.rs  event_item.rs  format_item.rs  glom_parameters.rs  mod.rs  scaler_item.rs  state_change.rs  text_item.rs  triggers_item.rs
src/sharedmem/: binder.rs  mirror.rs  mod.rs
src/spectclio/: mod.rs
src/spectra/: integration.rs  mod.rs  multi1d.rs  multi2d.rs  oned.rs  pgamma.rs  summary.rs  twod.rs  twodsum.rs
src/test/: mod.rs
src/trace/: mod.rs
