[package]
name = "rustogramer"
version = "0.2.0"
edition = "2021"
authors = ["Ron Fox fox@frib.msu.edu"]
description="A generic histogramer intended for nuclear science data from the FRIB"
repository="https://github.com/FRIBDAQ/rustogrammer/"
license = "GPL-3.0"
categories=["command-line-utilities", "science"]
keywords=["FRIB", "histogramer", "science-nuclear"]

#   For now, since distribution, theoretically require 
#   MSU intellectual property management:
#   (and this is not a derived work of any sort).

publish = false


[[bin]]
name="rustogrammer"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndhistogram = "0.9.0"
humantime = "2.1.0"
tempfile  = "3.7.1"    # For tests that create ring item files.
libm = "0.2.7"
glob = "0.3.1"
memmap = "0.7.0"
dirs = "5.0.1"
clap = { version = "4.3.19", features = ["derive"] }
portman_client="0.2.0"
serde = {version = "1.0.183", features = ["derive"]}
chrono="0.4.26"
scan_fmt="0.2.6"
# For tests that need unique filenames.
names = {version = "0.14.0", default-features = false}

[dependencies.rocket]
version="0.5.0-rc.3"
features=["json"]
