[package]
name = "rustogramer"
version = "1.2.1"
edition = "2021"
authors = ["Ron Fox fox@frib.msu.edu"]
description="A generic histogramer intended for nuclear science data from the FRIB"
repository="https://github.com/FRIBDAQ/rustogrammer/"
license = "GPL-3.0"
categories=["command-line-utilities", "science"]
keywords=["FRIB", "histogramer", "science-nuclear"]

#   For now, since distribution, theoretically require 
#   MSU intellectual property management:
#   (and this is not a derived work of any sort).

publish = false


[[bin]]
name="rustogrammer"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndhistogram = "0.10.0"
humantime = "2.1.0"
libm = "0.2.15"
glob = "0.3.3"
memmap = "0.7.0"
dirs = "6.0.0"
clap = { version = "4.5.47", features = ["derive"] }
portman_client="0.2.0"
serde = {version = "1.0.188", features = ["derive"]}
chrono="0.4.41"
scan_fmt="0.2.6"
rust_ringitem_format = "0.1.2"
md5 = "0.8.0"
tempfile  = "3.21.0"

[dev-dependencies]
names = {version = "0.14.0", default-features = false}



[dependencies.rocket]
version="0.5.0-rc.3"
features=["json"]
